--- a/WorldGDP.html
+++ b/WorldGDP.html
@@ -472,7 +472,7 @@ print(Pentile_Table, nrows = 189) #have to specify number of rows to display mor
 </div>
 <div id="summary" class="section level3">
 <h3>Summary</h3>
-<p>In summary, a country’s Income Group does not necessarily translate to a specific GDP. The various Income Groups can be seen across nearly all the pentiles with the exception of no High Income: OECD in the 5th quantile and no Low Income in the 1st. Generally speaking, a country’s membership in OECD is a better indicator of higher GDP with OECD countries falling mainly in the top 3 pentiles (average ranking 32.97) (with the exception of one OECD member in the 4th). Conversely, non-OECD High Income countries have an averge ranking of just 91.91. Last, the top pentile has significantly higher GDP’s than the subsequent four indicating that the world’s wealth is unevenly distributed.</p>
+<p>In summary, a country’s Income Group does not necessarily translate to a specific GDP. The various Income Groups can be seen across nearly all the pentiles with the exception of no High Income: OECD countries in the 5th quantile and no Low Income in the 1st. Generally speaking, a country’s membership in OECD is a better indicator of higher GDP with OECD countries falling mainly in the top 3 pentiles, average ranking 32.97, with the exception of one OECD member in the 4th. Conversely, non-OECD High Income countries have an averge ranking of just 91.91. Last, the top pentile has significantly higher GDP’s than the subsequent four indicating that the world’s wealth is unevenly distributed.</p>
 <hr />
 <hr />
 </div>
